home page spacing FIXED YEA

--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
@@ -21,12 +22,14 @@
 
 .nav_top-right {
     flex: 2;
+    margin-left: 600px;
+    margin-top: 7px
 }
 
 .nav_top-logo {
     color: blue;
     text-decoration: none;
-    font-size: 21px;
+    font-size: 24px;
     font-weight: bold;
     margin-left: 70px;
 }
@@ -61,22 +64,29 @@
 .footer_hours-one {
     flex: 3;
     margin-left: 100px;
+    margin-right: 70px;
 }
 
 .footer_hours-two {
     flex: 4;
-    margin-left: 60px;
+    margin-right: 60px;
     margin-top: 30px;
 }
 
 .footer_hours-three {
     flex: 5;
-    margin-left: 30px;
     margin-top: 30px;
 }
 
 .footer_social {
     flex: 6;
+}
+
+.footer_social-desc {
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: -35px;
+    width: 200px;
 }
 
 .footer_headings {
@@ -87,20 +97,24 @@
 
 .footer_desc-name {
     color: orange;
-    font-size: 12px;
+    font-size: 10px;
+    margin-top: 20px;
 }
 
 .footer_desc {
     color: blue;
     font-size: 16px;
+    margin-top: 10px;
 }
 
 .footer_social-icons {
     min-width: 25px;
     max-width: 25px;
+    margin-top: 35px;
 }
 
 .footer_social-facebook {
     min-width: 13px;
     max-width: 13px;
+    margin-top: 35px;
 }
